src/snapshots/diagnostic_json/netsuke__diagnostic_json__tests__circular_dependency_display.snap
---
source: src/diagnostic_json/tests/mod.rs
expression: rendered
---
Circular dependency detected: ⁨["a", "b", "a"]⁩.
