src/snapshots/diagnostic_json/netsuke__diagnostic_json__tests__circular_dependency_json.snap
---
source: src/diagnostic_json/tests/mod.rs
expression: rendered
---
{
  "schema_version": 1,
  "generator": {
    "name": "netsuke",
    "version": "[version]"
  },
  "diagnostics": [
    {
      "message": "Failed to build graph from the manifest.",
      "code": null,
      "severity": "error",
      "help": null,
      "url": null,
      "causes": [
        "Circular dependency detected: ⁨[\"a\", \"b\", \"a\"]⁩."
      ],
      "source": null,
      "primary_span": null,
      "labels": [],
      "related": []
    }
  ]
}
